--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: lightgrey;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  border: 1px solid darkgray;
+  border-radius: 5px;
+  background-color: rgb(206, 240, 206);
+  padding: 10px;
 }
